k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: classic-models
  labels:
    app.kubernetes.io/part-of: classic-models-api
